fixed layout issue on home page.  Added exerpt separator to posts

--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,7 @@ body {
   background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  min-height: 1024px;
   overflow-y: auto;
 }
 
